--- a/index.html
+++ b/index.html
@@ -2,49 +2,33 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>I'm Sorry, My Love</title>
-  <style>
-    body {
-      margin: 0;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: linear-gradient(to bottom right, #fceabb, #f8b500);
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      color: #333;
-      text-align: center;
-    }
-    h1 {
-      font-size: 3rem;
-      margin-bottom: 1rem;
-    }
-    p {
-      font-size: 1.2rem;
-      max-width: 600px;
-      margin: 0 auto 2rem;
-    }
-    button {
-      padding: 12px 24px;
-      font-size: 1rem;
-      background-color: #ff6f61;
-      border: none;
-      color: white;
-      cursor: pointer;
-      border-radius: 5px;
-    }
-    button:hover {
-      background-color: #ff4c3b;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <title>I'm Sorry, My Love</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Raffia, I'm Deeply Sorry</h1>
-  <p>I know I've hurt you more than once, and my heart aches thinking about the pain I've caused. You mean the world to me, and I never want to lose you. I promise to always be there for you, through every storm and every sunshine. You're the most special person in my life.</p>
-  <audio id="audio" src="audio.mp3"></audio>
-  <button onclick="document.getElementById('audio').play()">Play Audio Message</button>
+    <h1>To the One Who Owns My Heart</h1>
+    <p>
+    I hear you, and I respect that you don’t want to talk right now. I just want to say one last thing for now.
+    I never wanted to hurt you. You mean more to me than I’ve probably shown, and I get why you’re upset.
+    I’ll give you the space you need, no pressure at all. Just know my heart’s still here, when and if you’re ready to talk.
+    </p>
+    <p>
+    I didn’t mean to make you feel like I didn’t trust you. The truth is, I trust you more than anyone. 
+    I just got scared of losing something I care about too much. You’re not just someone I talk to… you're someone who lights up my day, even from miles away.
+    </p>
+    <p>
+    I miss your laugh, your way of flipping a boring conversation into something magical, your mind that always surprises me. 
+    What I said came from fear, not from doubt in you. And I get it now—it hurt you, and I hate that.
+    </p>
+    <p>
+    You deserve freedom, trust, and love—and I want to give you all three, not control you. 
+    If your heart’s still open to it… I’m here. Not to question you, just to love you better.
+    </p>
+    <p>
+    I’m truly sorry for all the times I’ve hurt you, unintentionally or out of fear. You mean the world to me, and I’d never want to be the reason behind your tears. 
+    I love you deeply and endlessly, and I hope I can show you just how much every single day.
+    </p>
+    <a href="page1.html">Next</a>
 </body>
 </html>
